better setting page

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -328,7 +328,7 @@
             <p class="text-muted">Toggle routing features. When both options are off, accounts are selected by
               balancing usage evenly.</p>
 
-            <fieldset style="margin-top: 12px">
+            <fieldset class="settings-fieldset">
               <legend>Sticky threads</legend>
               <input id="sticky-threads-toggle" type="checkbox" x-model="settings.stickyThreadsEnabled"
                 aria-describedby="sticky-threads-help">
@@ -340,7 +340,7 @@
               </div>
             </fieldset>
 
-            <fieldset style="margin-top: 12px">
+            <fieldset class="settings-fieldset">
               <legend>Reset priority</legend>
               <input id="reset-priority-toggle" type="checkbox" x-model="settings.preferEarlierResetAccounts"
                 aria-describedby="reset-priority-help">
