Changed dashboard loading text

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -44,7 +44,7 @@
       <div class="loading-overlay" x-show="isLoading" x-transition.opacity>
         <div class="loading-panel" role="status" aria-live="polite">
           <span class="spinner animate" aria-hidden="true"></span>
-          <div>Loading dashboard...</div>
+          <div>Loading Dashboard...</div>
         </div>
       </div>
       <section class="tabs" aria-label="Codex FE tabs">
